# CogCoM

./: .gitignore  README.md  pyproject.toml  tree.txt
cogcom/: __init__.py
cogcom/demo/: cli_demo_sat.py
cogcom/utils/: language.py
